--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
   },
   "author": "",
   "license": "ISC",
+  "browserslist": [
+    "defaults",
+    "not IE 11",
+    "maintained node versions"
+  ],
   "devDependencies": {
     "browser-sync": "^2.27.10",
     "gulp": "^4.0.2",
