--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-cli": "^2.3.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
+    "normalize.css": "^8.0.1",
     "sass": "^1.53.0"
   }
 }
